--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
       <div class="swiper-wrapper">
 
-        <div class="swiper-slide"><img src="/img/nav-demo.jpg" alt="1"></div>
-        <div class="swiper-slide"><img src="/img/scroll-demo.jpg" alt="2"></div>
-        <div class="swiper-slide"><img src="/img/canvas-demo.jpg" alt="3"></div>
+        <div class="swiper-slide"><img src="./img/nav-demo.jpg" alt="1"></div>
+        <div class="swiper-slide"><img src="./img/scroll-demo.jpg" alt="2"></div>
+        <div class="swiper-slide"><img src="./img/canvas-demo.jpg" alt="3"></div>
       </div>
     </div>
     <div class="swiper-button-prev"></div>
@@ -194,11 +194,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"></script>
   <!--初次进行模块化-->
-  <script src="/JS/swiper-init.js"></script>
-  <script src="/JS/auto-slide-up.js"></script>
-  <script src="/JS/sticky-topNavbar.js"></script>
-  <script src="/JS/scroll-nav.js"></script>
-  <script src="/JS/message.js"></script>
+  <script src="./JS/swiper-init.js"></script>
+  <script src="./JS/auto-slide-up.js"></script>
+  <script src="./JS/sticky-topNavbar.js"></script>
+  <script src="./JS/scroll-nav.js"></script>
+  <script src="./JS/message.js"></script>
 </body>
 
 </html>
